# wartrammer-40k

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  sort_flutter_resources.patch
.github/workflows/: wartrammer-40k.yml
frontend/: README.md  index.html  pubspec.yaml  styles.css
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/flutter_wartrammer_40k/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
nixos-module/: default.nix
pkgs/: backend.nix  frontend.nix
src/: filter.rs  main.rs  storage.rs  structs.rs
