[package]
name = "wartrammer-40k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dump-dvb = { version = "0.1", git = "https://github.com/dump-dvb/dump-dvb.rs" }

clap = { version = "3.1.8", features = ["derive"] }
derive_builder = "*"

actix-web = "*"
actix-rt = "*"
actix-multipart = "0.4.0"

serde_json = "1.0"
serde = { version = "1.0.101", features = ["derive"] }

csv = "1.1"

chrono = { version = "0.4", features = ["serde"] }
